Fix #17340 - [Feature] Update Raw material report

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -105,6 +105,8 @@ cdlFreq = Frequenz
 
 cdlQty = Zu kontrollierende Menge
 
+certified = Zertifiziert
+
 certificatAgence = Agentur f\u00FCr Zertifizierung
 
 certificatStandart = Standard der Zertifizierung
@@ -470,6 +472,8 @@ month = Monat
 
 months = Monate
 
+na = Nicht anwendbar
+
 name = Produktname
 
 namePerson = Name :
@@ -782,6 +786,8 @@ step = Schritt
 storageConditions = Lagerbedingungen
 
 su = VE
+
+suitable = Angepasst
 
 supplier = Lieferant(en)
 
