--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en.properties
@@ -101,6 +101,8 @@ canContain = May contain :
 
 caskStrength = Undiluted?
 
+certified = Certified
+
 cdlFreq = Frequency
 
 cdlQty = Quantity to control
@@ -470,6 +472,8 @@ month = M
 
 months = M
 
+na = Not applicable
+
 name = Product name
 
 namePerson = Name :
@@ -782,6 +786,8 @@ step = Step
 storageConditions = Storage conditions
 
 su = SU
+
+suitable = Suitable
 
 supplier = Supplier(s)
 
