--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en_US.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en_US.properties
@@ -105,6 +105,8 @@ cdlFreq = Frequency
 
 cdlQty = Quantity to control
 
+certified = Certified
+
 certificatAgence = Certification agency
 
 certificatStandart = Certification standard
@@ -470,6 +472,8 @@ month = M
 
 months = M
 
+na = Not applicable
+
 name = Product name
 
 namePerson = Name :
@@ -782,6 +786,8 @@ step = Step
 storageConditions = Storage conditions
 
 su = SU
+
+suitable = Suitable
 
 supplier = Supplier(s)
 
