--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
@@ -105,6 +105,8 @@ cdlFreq = Frecuencia
 
 cdlQty = Cantidad a controlar
 
+certified = Certificado
+
 certificatAgence = Agencia de certificaci\u00F3n
 
 certificatStandart = Norma de certificaci\u00F3n
@@ -470,6 +472,8 @@ month = Mes
 
 months = Meses
 
+na = No aplicable
+
 name = Nombre del producto
 
 namePerson = Nombre :
@@ -782,6 +786,8 @@ step = Paso
 storageConditions = Condiciones de conservaci\u00F3n
 
 su = UV
+
+suitable = Adaptado
 
 supplier = Proveedor (es)
 
