--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -105,6 +105,8 @@ cdlFreq = Taajuus
 
 cdlQty = Valvottava m\u00e4\u00e4r\u00e4
 
+certified = Sertifioitu
+
 certificatAgence = Sertifiointilaitos
 
 certificatStandart = Sertifiointistandardi
@@ -470,6 +472,8 @@ month = Kuukausi
 
 months = Kuukautta
 
+na = Ei sovellu
+
 name = Tuotteen nimi
 
 namePerson = Nimi :
@@ -782,6 +786,8 @@ step = Askel
 storageConditions = Varastointiolosuhteet
 
 su = SU
+
+suitable = Mukautettu
 
 supplier = Toimittaja(t)
 
