--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -105,6 +105,8 @@ cdlFreq = Fr\u00E9quence
 
 cdlQty = Quantit\u00E9 \u00e0 contr\u00f4ler
 
+certified = Certifi\u00E9
+
 certificatAgence = Agence de certification
 
 certificatStandart = Standard de certification
@@ -470,6 +472,8 @@ month = M
 
 months = M
 
+na = Non applicable
+
 name = Nom du produit
 
 namePerson = Nom :
@@ -782,6 +786,8 @@ step = \u00C9tape
 storageConditions = Conditions de conservation
 
 su = UV
+
+suitable = Adapt\u00E9
 
 supplier = Fournisseur(s)
 
