--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -105,6 +105,8 @@ cdlFreq = Frequenza
 
 cdlQty = Quantit\u00e0 da controllare
 
+certified = Certificato
+
 certificatAgence = Agenzia di certificazione
 
 certificatStandart = Standard di certificazione
@@ -470,6 +472,8 @@ month = M
 
 months = M
 
+na = Non applicabile
+
 name = Nome del prodotto
 
 namePerson = Nome :
@@ -782,6 +786,8 @@ step = Passo
 storageConditions = Condizioni di conservazione
 
 su = UV
+
+suitable = Adattato
 
 supplier = Fornitore(i)
 
