--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
@@ -105,6 +105,8 @@ cdlFreq = Frequentie
 
 cdlQty = Hoeveelheid om te controleren
 
+certified = Gecertificeerd
+
 certificatAgence = Certificeringsbureau
 
 certificatStandart = Certificeringsnorm
@@ -470,6 +472,8 @@ month = Maand
 
 months = Maanden
 
+na = Niet van toepassing
+
 name = Productnaam
 
 namePerson = Naam :
@@ -782,6 +786,8 @@ step = Stap
 storageConditions = AANBEVOLEN OPSLAGCONDITIES
 
 su = VE
+
+suitable = Aangepast
 
 supplier = Providers
 
