--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -105,6 +105,8 @@ cdlFreq = Frekvens
 
 cdlQty = Kvantitet att kontrollera
 
+certified = Auktoriserad
+
 certificatAgence = Certifieringsorgan
 
 certificatStandart = Certifieringsstandard
@@ -470,6 +472,8 @@ month = M\u00E5nad
 
 months = M\u00E5nader
 
+na = Ej till\u00e4mpligt
+
 name = Produktnamn
 
 namePerson = Namn :
@@ -782,6 +786,8 @@ step = Steg
 storageConditions = Lagringsvillkor
 
 su = SU
+
+suitable = Anpassad
 
 supplier = Leverant\u00F6r(er)
 
