--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -105,6 +105,8 @@ cdlFreq = \u9891\u7387
 
 cdlQty = \u6570\u91cf\u8981\u63a7\u5236
 
+certified = \u5df2\u8ba4\u8bc1
+
 certificatAgence = \u8BA4\u8BC1\u673A\u6784
 
 certificatStandart = \u8BA4\u8BC1\u6807\u51C6
@@ -470,6 +472,8 @@ month = \u4E2D\u53F7
 
 months = \u4E2D\u53F7
 
+na = \u4e0d\u9002\u7528
+
 name = \u4EA7\u54C1\u540D\u79F0
 
 namePerson = \u547D\u540D :
@@ -782,6 +786,8 @@ step = \u6B65
 storageConditions = \u8D2E\u85CF\u6761\u4EF6
 
 su = \u82CF
+
+suitable = \u6539\u7f16
 
 supplier = \u4F9B\u5E94\u5546
 
