--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
@@ -105,6 +105,8 @@ cdlFreq = Freq\u00fc\u00eancia
 
 cdlQty = Quantidade a controlar
 
+certified = Certificado
+
 certificatAgence = Ag\u00EAncia de certifica\u00E7\u00E3o
 
 certificatStandart = Norma de certifica\u00E7\u00E3o
@@ -470,6 +472,8 @@ month = M
 
 months = M
 
+na = N\u00e3o aplic\u00e1vel
+
 name = Nome do Produto
 
 namePerson = Nome :
@@ -782,6 +786,8 @@ step = Degrau
 storageConditions = Condi\u00E7\u00F5es de armazenamento
 
 su = SU
+
+suitable = Adaptado
 
 supplier = Fornecedor (es)
 
