Fix #22637 - [Feature] Add laboratories management in stock

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -93,6 +93,7 @@ path.labelingtemplates                   = Patrons de marquage
 path.labelingtypes                       = Types de marquage
 path.labels                              = Mentions
 path.labeltypes                          = Types de mention
+path.laboratories                        = Laboratoires
 path.lcadatabases                        = Bases de donn\u00E9es ACV
 path.lcalistmethods                      = M\u00E9thodes de mesures des ACV
 path.lcaunits                            = Unit\u00E9s ACV
