--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -88,6 +88,7 @@ bcpg_bcpgmodel.association.bcpg_ingListClaims.title                             
 bcpg_bcpgmodel.association.bcpg_ingListGeoOrigin.title                          = Origine g\u00E9ographique
 bcpg_bcpgmodel.association.bcpg_ingListGeoTransfo.title                         = Pays de transfo
 bcpg_bcpgmodel.association.bcpg_ingListIng.title                                = Ingr\u00E9dient
+bcpg_bcpgmodel.association.bcpg_laboratories.title                              = Laboratoires
 bcpg_bcpgmodel.association.bcpg_lcaListComponent.title                          = Composant
 bcpg_bcpgmodel.association.bcpg_lcaListLca.title                                = ACV
 bcpg_bcpgmodel.association.bcpg_lclCertification.title                          = Certification
