InProgess #24278 - [Feature] Add saved search feature

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get_fr.properties
@@ -1,5 +1,14 @@
 
-button.download-report = T\u00E9l\u00E9charger un rapport...
+bouton.create-saved-view    = &nbsp;
+bouton.delete-saved-view    = &nbsp;
+bouton.duplicate-saved-view = &nbsp;
+bouton.edit-saved-view      = &nbsp;
+
+button.create-saved-view.description    = Cr\u00E9er une nouvelle vue enregistr\u00E9e
+button.delete-saved-view.description    = Supprimer la vue enregistr\u00E9e s\u00E9lectionn\u00E9e
+button.download-report                  = T\u00E9l\u00E9charger un rapport...
+button.duplicate-saved-view.description = Cr\u00E9er une copie de la vue enregistr\u00E9e s\u00E9lectionn\u00E9e
+button.edit-saved-view.description      = Modifier les d\u00E9tails de la vue enregistr\u00E9e s\u00E9lectionn\u00E9e
 
 filter.Archived       = Archiv\u00E9
 filter.Compliant      = Conforme
@@ -19,6 +28,19 @@ filter.favourites     = Mes favoris
 filter.new            = Nouveau
 filter.response       = R\u00E9ponse
 filter.treatment      = Traitement
+
+message.create-saved-view.failure    = Impossible de cr\u00E9er la vue enregistr\u00E9e
+message.create-saved-view.success    = Vue enregistr\u00E9e cr\u00E9\u00E9e avec succ\u00E8s
+message.delete-saved-view.failure    = Impossible de supprimer la vue enregistr\u00E9e
+message.delete-saved-view.success    = Vue enregistr\u00E9e supprim\u00E9e avec succ\u00E8s
+message.duplicate-saved-view.failure = Impossible de dupliquer la vue enregistr\u00E9e
+message.duplicate-saved-view.success = Vue enregistr\u00E9e dupliqu\u00E9e avec succ\u00E8s
+message.edit-saved-view.failure      = Impossible de mettre \u00E0 jour la vue enregistr\u00E9e
+message.edit-saved-view.success      = La vue enregistr\u00E9e a \u00E9t\u00E9 mise \u00E0 jour avec succ\u00E8s
+
+picker.saved-view.choose  = S\u00E9lectionner une vue enregistr\u00E9e
+picker.saved-view.default = Vue par d\u00E9faut
+picker.saved-view.none    = Aucun
 
 type.client                  = Client
 type.ecm_changeOrder         = Ordre de modification
