InProgess #24278 - [Feature] Add saved search feature

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups_fr.properties
@@ -9,5 +9,6 @@ becpg.group.licensesupplierconcurrent = beCPG Licences flottantes fournisseur
 becpg.group.licensewriteconcurrent    = beCPG Licences flottantes en \u00E9dition
 becpg.group.licensewritenamed         = beCPG Licences nomm\u00E9es en \u00E9dition
 becpg.group.olapuser                  = beCPG Utilisateurs Olap
+becpg.group.savedsearchmgr            = beCPG Responsables recherches sauvegard\u00E9es
 becpg.group.securityrole              = beCPG R\u00F4les de s\u00E9curit\u00E9
 becpg.group.systemmgr                 = beCPG Responsables Syst\u00E8me
