--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -87,6 +87,7 @@ bcpg_bcpgmodel.property.bcpg_httpLink5.description              = Entrez un lien
 bcpg_bcpgmodel.property.bcpg_httpLink5.title                    = Lien 5
 bcpg_bcpgmodel.property.bcpg_isDefaultVariant.title             = Variante par d\u00E9faut
 bcpg_bcpgmodel.property.bcpg_isDeleted.title                    = Supprim\u00E9
+bcpg_bcpgmodel.property.bcpg_isGlobalSavedSearch.title          = Disponible \u00E0 tous?
 bcpg_bcpgmodel.property.bcpg_isManualListItem.title             = Manuel
 bcpg_bcpgmodel.property.bcpg_lkvValue.title                     = Valeur
 bcpg_bcpgmodel.property.bcpg_lvCode.title                       = Code
