Fix #24280 - [Feature] New Lustucru and Snellman GS1 fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -109,6 +109,7 @@ data.list.exportqualitycontrols               = Export des contr\u00F4les qualit
 data.list.exportsupplierscontacts             = Export des contacts fournisseurs
 data.list.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
 data.list.geoOrigin                           = Origines g\u00E9ographiques
+data.list.growingmethodcode					  = M\u00E9thodes de culture
 data.list.gs1_hierarchy                       = Hi\u00E9rarchie GS1
 data.list.handlinginstructions                = Instructions de manutention
 data.list.hazardcategories                    = Classes de danger
@@ -177,6 +178,7 @@ data.list.packaginglevels                     = Niveaux de packaging
 data.list.packagingmaterial_hierarchy         = Hi\u00E9rarchie des emballages
 data.list.packagingrecyclingschemecode        = Sch\u00E9mas de tri
 data.list.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
+data.list.packagingfunctioncode               = Fonction de l'emballage
 data.list.packagingtypecode                   = Types d'emballage
 data.list.pallettypecode                      = Types de support palette
 data.list.personalprotection                  = Equipements de protection individuelle
