--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_en.properties
@@ -193,6 +193,7 @@ gs1_gs1Model.property.gs1_organicProductPlaceOfFarmingCode.title                
 gs1_gs1Model.property.gs1_originOfWineCode.description                                    = Indicates the country, region and sub-region where the wine has been produced. The levels of origin required are sometimes regulated, therefore the values represent a variety that allows a recipient to choose which level is needed.
 gs1_gs1Model.property.gs1_originOfWineCode.title                                          = Wine origin
 gs1_gs1Model.property.gs1_packUnitNumber.title                                            = Packaging units number
+gs1_gs1Model.property.gs1_packagingFunctionCode.title                                     = Packaging function
 gs1_gs1Model.property.gs1_packagingRecyclingProcessTypeCode.description                   = The process the packaging could undertake for recyclable & sustainability programs
 gs1_gs1Model.property.gs1_packagingRecyclingProcessTypeCode.title                         = Packaging Recycling Process Type
 gs1_gs1Model.property.gs1_packagingRecyclingSchemeCode.title                              = Recycling schemes
@@ -230,6 +231,7 @@ gs1_gs1Model.property.gs1_productPerInnerPack.title                             
 gs1_gs1Model.property.gs1_productionMethodForFishAndSeafoodCode.title                     = Production method
 gs1_gs1Model.property.gs1_promotionTypeCode.description                                   = Used to identify the different types of free quantity promotional trade items and the nature of the link between the standard trade item and the promotional trade item.
 gs1_gs1Model.property.gs1_promotionTypeCode.title                                         = Promotion Type Code
+gs1_gs1Model.property.gs1_provenanceStatement.title                                       = Provenance
 gs1_gs1Model.property.gs1_publicationDate.title                                           = Publication date
 gs1_gs1Model.property.gs1_referencedTradeItemEanCode.title                                = Referenced trade item GTIN code
 gs1_gs1Model.property.gs1_referencedTradeItemTypeCode.title                               = Referenced trade item type code
