--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -193,6 +193,7 @@ gs1_gs1Model.property.gs1_organicProductPlaceOfFarmingCode.title                
 gs1_gs1Model.property.gs1_originOfWineCode.description                                    = Indique le pays, la r\u00E9gion et la sous-r\u00E9gion o\u00F9 le du vin a \u00E9t\u00E9 produit. Les niveaux d'origine requis sont parfois r\u00E9glement\u00E9, les valeurs repr\u00E9sentent donc un vari\u00E9t\u00E9 qui permet \u00E0 un destinataire de choisir quel niveau est n\u00E9cessaire.
 gs1_gs1Model.property.gs1_originOfWineCode.title                                          = Origine du vin
 gs1_gs1Model.property.gs1_packUnitNumber.title                                            = Nb d'unit\u00E9s d'emballage
+gs1_gs1Model.property.gs1_packagingFunctionCode.title                                     = Fonction de l'emballage
 gs1_gs1Model.property.gs1_packagingRecyclingProcessTypeCode.description                   = Le processus que l'emballage pourrait entreprendre pour les programmes de recyclage et de durabilit\u00E9
 gs1_gs1Model.property.gs1_packagingRecyclingProcessTypeCode.title                         = Type de processus de recyclage des emballages
 gs1_gs1Model.property.gs1_packagingRecyclingSchemeCode.title                              = Schemas de tri
@@ -230,6 +231,7 @@ gs1_gs1Model.property.gs1_productPerInnerPack.title                             
 gs1_gs1Model.property.gs1_productionMethodForFishAndSeafoodCode.title                     = M\u00E9thode de production
 gs1_gs1Model.property.gs1_promotionTypeCode.description                                   = Type de promotion
 gs1_gs1Model.property.gs1_promotionTypeCode.title                                         = Type de promotion
+gs1_gs1Model.property.gs1_provenanceStatement.title                                       = Provenance
 gs1_gs1Model.property.gs1_publicationDate.title                                           = Date de publication
 gs1_gs1Model.property.gs1_referencedTradeItemEanCode.title                                = GTIN de l'article li\u00E9
 gs1_gs1Model.property.gs1_referencedTradeItemTypeCode.title                               = Nature du produit r\u00E9f\u00E9renc\u00E9
