--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -72,6 +72,7 @@ path.exportsurvey                        = Export des questionnaires
 path.exportsvhc                          = Export des substances dangereuses
 path.finishedproduct_hierarchy           = Hi\u00E9rarchie des produits finis
 path.geoorigins                          = Origines g\u00E9ographiques
+path.growingmethodcode					 = M\u00E9thodes de culture
 path.gs1_hierarchy                       = Hi\u00E9rarchie GS1
 path.handlinginstructions                = Instructions de manutention
 path.hazardcategories                    = Classes de danger
@@ -129,6 +130,7 @@ path.packagingmaterial_hierarchy         = Hi\u00E9rarchie des emballages
 path.packagingmaterials                  = Mat\u00E9riaux
 path.packagingrecyclingschemecode        = Sch\u00E9mas de tri
 path.packagingtermsandconditionscode     = Indications d'emballage r\u00E9utilisable
+path.packagingfunctioncodes              = Fonction de l'emballage
 path.packagingtypecodes                  = Types d'emballage
 path.pallettypecodes                     = Types de support palette
 path.personalprotections                 = Equipements de protection individuelle
