InProgress #24513 - [Feature] In progress n+2 n+3 cost report

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -585,7 +585,7 @@ pmAdditionalMaterial = Zus\u00E4tzliches Material:
 
 pmCoilDiameter = Spulendurchmesser (mm) :
 
-pmConsumerUsageInstructions = Gebrauchsanweisung f\u00fcr Verbraucher: 
+pmConsumerUsageInstructions = Gebrauchsanweisung f\u00FCr Verbraucher: 
 
 pmCoreDiameter = Futterdurchmesser (mm) :
 
@@ -605,7 +605,7 @@ pmIntLength = Innenl\u00E4nge (mm):
 
 pmIntWidth = Innenbreite (mm):
 
-pmIsPackagingMarkedReturnable = Erw\u00e4hnung "Verpackung / Mehrwegverpackung" markiert (ja / nein): 
+pmIsPackagingMarkedReturnable = Erw\u00E4hnung "Verpackung / Mehrwegverpackung" markiert (ja / nein): 
 
 pmPackagingRecyclingProcessTypeCode = Art des Verpackungsrecyclingprozesses: 
 
