--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
@@ -605,13 +605,13 @@ pmIntLength = Longitud interior (mm):
 
 pmIntWidth = Anchura interior (mm):
 
-pmIsPackagingMarkedReturnable = Mencione "embalaje / embalaje retornable" marcado (s\u00ed / no): 
+pmIsPackagingMarkedReturnable = Mencione "embalaje / embalaje retornable" marcado (s\u00ED / no): 
 
 pmPackagingRecyclingProcessTypeCode = Tipo de proceso de reciclaje de envases: 
 
 pmPackagingRecyclingSchemeCode = Sistemas de reciclaje: 
 
-pmPackagingTermsAndConditionCode = Indicaci\u00f3n de envases reutilizables:
+pmPackagingTermsAndConditionCode = Indicaci\u00F3n de envases reutilizables:
 
 pmPaperWeight = Peso (g/m\u00B2):
 
@@ -623,11 +623,11 @@ pmPrintType = Tipo de impresi\u00F3n :
 
 pmPrintVarnish = Barniz de impresi\u00F3n : 
 
-pmSortingBonus = Bono de clasificaci\u00f3n: 
+pmSortingBonus = Bono de clasificaci\u00F3n: 
 
-pmSortingInstructions = Instrucciones de clasificaci\u00f3n: 
+pmSortingInstructions = Instrucciones de clasificaci\u00F3n: 
 
-pmSortingMalus = Clasificaci\u00f3n malus: 
+pmSortingMalus = Clasificaci\u00F3n malus: 
 
 pmThickness = Espesor (mm) :
 
