--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
@@ -101,7 +101,7 @@ canContain = Pode conter :
 
 caskStrength = N\u00E3o dilu\u00EDdo?
 
-cdlFreq = Freq\u00fc\u00eancia
+cdlFreq = Freq\u00FC\u00EAncia
 
 cdlQty = Quantidade a controlar
 
@@ -585,7 +585,7 @@ pmAdditionalMaterial = Material adicional:
 
 pmCoilDiameter = Di\u00E2metro da bobina (mm) : 
 
-pmConsumerUsageInstructions = Instruç\u00f5es de uso do consumidor: 
+pmConsumerUsageInstructions = Instru\u00E7\u00F5es de uso do consumidor: 
 
 pmCoreDiameter = Di\u00E2metro do mandril (mm) :
 
@@ -605,13 +605,13 @@ pmIntLength = Largura interna (mm):
 
 pmIntWidth = Largura interna (mm):
 
-pmIsPackagingMarkedReturnable = Mencione \u201Cembalagem / embalagem retorn\u00e1vel\u201D marcada (sim/n\u00f5o): 
+pmIsPackagingMarkedReturnable = Mencione \u201Cembalagem / embalagem retorn\u00E1vel\u201D marcada (sim/n\u00F5o): 
 
 pmPackagingRecyclingProcessTypeCode = Tipo de Processo de Reciclagem de Embalagens: 
 
 pmPackagingRecyclingSchemeCode = Esquemas de reciclagem: 
 
-pmPackagingTermsAndConditionCode = Indicaç\u00f5o de embalagem reutiliz\u00e1vel: 
+pmPackagingTermsAndConditionCode = Indica\u00E7\u00F5o de embalagem reutiliz\u00E1vel: 
 
 pmPaperWeight = Peso (g / m\u00B2):
 
@@ -623,11 +623,11 @@ pmPrintType = Tipo de impress\u00E3o :
 
 pmPrintVarnish = Verniz de impress\u00E3o : 
 
-pmSortingBonus = Classificaç\u00f5o de bonus: 
+pmSortingBonus = Classifica\u00E7\u00F5o de bonus: 
 
-pmSortingInstructions = Instruç\u00f5es de classificaç\u00f5o: 
+pmSortingInstructions = Instru\u00E7\u00F5es de classifica\u00E7\u00F5o: 
 
-pmSortingMalus = Malus de classificaç\u00f5o: 
+pmSortingMalus = Malus de classifica\u00E7\u00F5o: 
 
 pmThickness = Espessura (mm) :
 
