--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -103,7 +103,7 @@ caskStrength = \u672A\u7A00\u91CA\uFF1F
 
 cdlFreq = \u9891\u7387
 
-cdlQty = \u6570\u91cf\u8981\u63a7\u5236
+cdlQty = \u6570\u91CF\u8981\u63A7\u5236
 
 certificatAgence = \u8BA4\u8BC1\u673A\u6784
 
