Fix #24278 - [Feature] Add saved search feature

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/product/product-list-toolbar.get_fr.properties
@@ -21,6 +21,8 @@ filter.new            = Nouveau
 filter.response       = R\u00E9ponse
 filter.treatment      = Traitement
 
+surf.include.resources = org/alfresco/components/entity-data-lists/entity-toolbar.get
+
 type.client                  = Client
 type.ecm_changeOrder         = Ordre de modification
 type.finishedProduct         = Produit fini
