--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_fr.properties
@@ -1,7 +1,18 @@
 
 action.sub-project.create.title = Cr\u00E9er un sous projet
 
+bouton.create-saved-search    = &nbsp;
+bouton.delete-saved-search    = &nbsp;
+bouton.duplicate-saved-search = &nbsp;
+bouton.edit-saved-search      = &nbsp;
+
 button.bulk-action-create                    = Cr\u00E9ation multiple
+button.create-saved-search.description       = Cr\u00E9er une nouvelle recherche enregistr\u00E9e
+button.delete-saved-search.description       = Supprimer la recherche enregistr\u00E9e s\u00E9lectionn\u00E9e
+button.duplicate-saved-search                = &nbsp;
+button.duplicate-saved-search.description    = Cr\u00E9er une copie de la recherche enregistr\u00E9e s\u00E9lectionn\u00E9e 
+button.edit-saved-search                     = &nbsp;
+button.edit-saved-search.description         = Modifier les d\u00E9tails de la recherche enregistr\u00E9e s\u00E9lectionn\u00E9e
 button.entity-actions                        = Actions
 button.entity-add-aspect                     = &nbsp;
 button.entity-add-aspect.description         = Ajouter un aspect
@@ -38,9 +49,11 @@ button.toggle-critical-path.description      = Afficher le chemin critique
 button.toggle-gantt.description              = Afficher/Masquer le Gantt
 button.toggle-target-dates.description       = Afficher/Masquer les dates planifi\u00E9s
 
+label.edit-saved-search.title         = Modifier la recherche enregistr\u00E9e
 label.edit-variant.title              = Editer la variante
 label.entity-reports-parameters.title = Param\u00E8tres des rapports
 label.new-row.title                   = Cr\u00E9er un \u00E9l\u00E9ment
+label.new-saved-search.title          = Nouvelle recherche enregistr\u00E9e
 label.new-variant.title               = Cr\u00E9er une variante
 label.product-metadata.title          = Propri\u00E9t\u00E9s de formulations
 label.project-metadata.title          = Propri\u00E9t\u00E9s du projet
@@ -53,10 +66,18 @@ menu.selected-items.duplicate    = Dupliquer
 
 message.confirm.delete.description     = \u00CAtes-vous s\u00FBr de vouloir supprimer {0}\u00A0\u00E9l\u00E9ments\u00A0?
 message.confirm.delete.title           = Supprimer {0}\u00A0\u00E9l\u00E9ments
+message.create-saved-search.failure    = \u00C9chec de la cr\u00E9ation d'une recherche enregistr\u00E9e
+message.create-saved-search.success    = Recherche enregistr\u00E9e cr\u00E9\u00E9e avec succ\u00E8s
+message.delete-saved-search.failure    = \u00C9chec de la suppression de la recherche enregistr\u00E9e
+message.delete-saved-search.success    = Recherche enregistr\u00E9e supprim\u00E9e avec succ\u00E8s
 message.delete.failure                 = \u00C9chec de la suppression des \u00E9l\u00E9ments
 message.delete.success                 = Succ\u00E8s de la suppression de {0}\u00A0\u00E9l\u00E9ments
+message.duplicate-saved-search.failure = \u00C9chec de la duplication de la recherche enregistr\u00E9e
+message.duplicate-saved-search.success = Recherche enregistr\u00E9e dupliqu\u00E9e avec succ\u00E8s
 message.duplicate.failure              = \u00C9chec de la duplication des \u00E9l\u00E9ments
 message.duplicate.success              = Succ\u00E8s de la duplication de {0}\u00A0\u00E9l\u00E9ments
+message.edit-saved-search.failure      = \u00C9chec de la mise \u00E0 jour de la vue enregistr\u00E9e
+message.edit-saved-search.success      = La recherche enregistr\u00E9e a \u00E9t\u00E9 mise \u00E0 jour avec succ\u00E8s
 message.formulate.failure              = Echec de la formulation
 message.formulate.please-wait          = Veuillez patienter, formulation en cours...
 message.formulate.success              = Succ\u00E8s de la formulation
@@ -67,3 +88,6 @@ message.new-row.failure                = \u00C9chec de l'ajout du nouvel \u00E9l
 message.new-row.success                = Succ\u00E8s de la cr\u00E9ation de l'\u00E9l\u00E9ment
 message.sub-project.create.please-wait = Cr\u00E9ation du sous projet en cours...
 message.sub-project.create.success     = Sous projet cr\u00E9\u00E9 avec succ\u00E9s
+
+picker.saved-search.choose = Recherches enregistr\u00E9es
+picker.saved-search.none   = Aucun
