Fix #24926 - [Feature] Add cancel confirmation in wizard

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/wizard/wizard-mgr.get_en.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/wizard/wizard-mgr.get_en.properties
@@ -1,4 +1,7 @@
 
+message.confirm.cancel.description = Are you sure you want to cancel? The entered data will be lost.
+message.confirm.cancel.title       = Cancellation Confirmation
+
 surf.include.resources = org/alfresco/modules/comments/comments-list.get,org/alfresco/components/edit-metadata/edit-metadata-mgr.get
 
 wizard.cancel.button   = Cancel
@@ -6,5 +9,6 @@ wizard.current.step    = Current step:
 wizard.finish.button   = Save and close
 wizard.loading.msg     = Loading ...
 wizard.next.button     = Next
+wizard.ok.button       = Ok
 wizard.pagination      = Pagination
 wizard.previous.button = Previous
