--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/wizard/wizard-mgr.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/wizard/wizard-mgr.get_fr.properties
@@ -1,4 +1,7 @@
 
+message.confirm.cancel.description = \u00CAtes-vous s\u00FBr de vouloir annuler ? Les donn\u00E9es saisies seront perdues.
+message.confirm.cancel.title       = Confirmation d'annulation
+
 surf.include.resources = org/alfresco/modules/comments/comments-list.get,org/alfresco/components/edit-metadata/edit-metadata-mgr.get
 
 wizard.cancel.button   = Annuler
@@ -6,5 +9,6 @@ wizard.current.step    = Etape en cours:
 wizard.finish.button   = Enregistrer et fermer
 wizard.loading.msg     = Chargement ...
 wizard.next.button     = Suivant
+wizard.ok.button       = OK
 wizard.pagination      = Pagination
 wizard.previous.button = Pr\u00E9c\u00E9dent
