InProgress #9778 - [Bug] Fix search forms to use in DB search

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -61,6 +61,7 @@ beCPG.report.name.format.description                           = Allows you to d
 beCPG.security.supplierPermission.description                  = Allows you to define the permission level applied to suppliers on the supplier portal (Coordinator,Contributor...)
 beCPG.sendToSupplier.entityName.format.description             = Allows you to define the format of the name of an entity of a supplier referencing project
 beCPG.sendToSupplier.projectName.format.description            = Allows you to define the format of the name of a supplier referencing project
+beCPG.solr.enableIndexForTypes.description                     = Re-enable indexing for certain data lists
 beCPG.spel.security.authorizedTypes.description                = Allows you to define the list of Java types authorized by SpEL formulas, separated by commas
 beCPG.spel.security.authorizedTypes.type                       = string
 beCPG.version.cleaner.maxProcessedNodes.description            = Allows you to define the number of nodes processed by the version cleanup job
