--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -61,6 +61,7 @@ beCPG.report.name.format.description                           = Permet de d\u00
 beCPG.security.supplierPermission.description                  = Permet de d\u00E9finir le niveau de permission appliqu\u00E9 aux fournisseurs sur le portail fournisseur (Coordinator,Contributor...)
 beCPG.sendToSupplier.entityName.format.description             = Permet de d\u00E9finir le format du nom d'une entit\u00E9 d'un projet de r\u00E9f\u00E9rencement fournisseur
 beCPG.sendToSupplier.projectName.format.description            = Permet de d\u00E9finir le format du nom d'un projet de r\u00E9f\u00E9rencement fournisseur
+beCPG.solr.enableIndexForTypes.description                     = R\u00E9activer l'indexation pour certaines listes de donn\u00E9es
 beCPG.spel.security.authorizedTypes.description                = Permet de d\u00E9finir la liste des types Java autoris\u00E9s par les formules SpEL, s\u00E9par\u00E9s par des virgules
 beCPG.spel.security.authorizedTypes.type                       = string
 beCPG.version.cleaner.maxProcessedNodes.description            = Permet de d\u00E9finir le nombre de noeuds trait\u00E9s par le job de nettoyage des versions
