Fix #22696 - [Feature] Improve toxicology

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -304,7 +304,8 @@ bcpg_bcpgmodel.property.bcpg_ingToxDermalAbsorption.title                       
 bcpg_bcpgmodel.property.bcpg_ingToxMaxOcularIrritation.title                    = Irritation oculaire maximale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxPhototoxic.title                          = Phototoxique maximum (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       = Sensibilisation maximale (%)
-bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritation.title                      = Irritation cutan\u00E9e maximale (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationLeaveOn.title               = Irritation cutan\u00E9e non rinc\u00E9 maximale (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationRinseOff.title              = Irritation cutan\u00E9e rinc\u00E9 maximale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
 bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD syst\u00E9mique (mg/kg/j)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = La cat\u00E9gorie r\u00E9glementaire est d\u00E9taill\u00E9e lorsque le seuil est d\u00E9pass\u00E9
@@ -803,7 +804,8 @@ listconstraint.bcpg_synchronisableStates.Template                     = Mod\u00E
 listconstraint.bcpg_toxTypesConstraint.OcularIrritation               = Irritation oculaire
 listconstraint.bcpg_toxTypesConstraint.PhototoxicalPotential          = Potentiel phototoxique
 listconstraint.bcpg_toxTypesConstraint.Sensitization                  = Sensibilisation
-listconstraint.bcpg_toxTypesConstraint.SkinIrritation                 = Irritation cutan\u00E9e
+listconstraint.bcpg_toxTypesConstraint.SkinIrritationLeaveOn          = Irritation cutan\u00E9e non rinc\u00E9
+listconstraint.bcpg_toxTypesConstraint.SkinIrritationRinseOff         = Irritation cutan\u00E9e rinc\u00E9
 listconstraint.bcpg_toxTypesConstraint.SystemicIngredient             = Ingr\u00E9dient syst\u00E9mique
 listconstraint.bcpg_variantColumns.bcpg_variantColumn1                = Variante 1
 listconstraint.bcpg_variantColumns.bcpg_variantColumn2                = Variante 2
