InProgress #22319 - [Feature] Add copy product action

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get_fr.properties
@@ -1,11 +1,13 @@
 
 actions.add-labelingAspect              = G\u00E9rer l'aspect marquage
-actions.duplicate-childs                = Dupliquer les enfants
+actions.copy-product                    = Copier le produit
+actions.duplicate-childs                = Copier les enfants
 actions.group                           = Regrouper
-actions.selected-items.duplicate-childs = Dupliquer les enfants
+actions.selected-items.copy-product     = Copier le(s) produit(s)
+actions.selected-items.duplicate-childs = Copier les enfants
 actions.selected-items.group            = Regrouper
-actions.selected-items.simulate         = Dupliquer le(s) produit(s)
-actions.simulate                        = Dupliquer le produit
+actions.selected-items.simulate         = Simuler le(s) produit(s)
+actions.simulate                        = Simuler le produit
 actions.toggle-effectivity              = Montrer/masquer l'effectivit\u00E9
 
 button.group = Regrouper
@@ -25,7 +27,7 @@ dashlet.customList.packMaterialList.title    = Mat\u00E9riaux
 dashlet.customList.physicoChemList.title     = Physico-chimiques 
 dashlet.customList.processList.title         = Liste des process
 dashlet.customList.regulatoryList.title      = Conformit\u00E9s
-dashlet.customList.svhcList.title			 = Substances dangereuses
+dashlet.customList.svhcList.title            = Substances dangereuses
 dashlet.customList.title                     = Liste personnalis\u00E9e
 dashlet.dynamicCharactList.colCheckbox       = Afficher les colonnes dynamiques
 dashlet.dynamicCharactList.title             = Caract\u00E9ristiques formul\u00E9es
@@ -33,13 +35,15 @@ dashlet.help.bcpg_dynamicCharactList         = <p>Ce dashlet affiche les calculs
 dashlet.help.bcpg_reqCtrlList                = <p>Ce dashlet affiche les exigences non respect\u00E9es.</p><p>Pour ajouter de nouvelles exigences, veuillez cr\u00E9er une sp\u00E9cification produit et la s\u00E9lectionner dans le champ "Sp\u00E9cification produit" du produit.</p>
 dashlet.help.composition                     = <p>Ce dashlet affiche la formule / recette du produit :<ul><li>les mati\u00E8res premi\u00E8res</li><li>les semi fini</li><li>les quantit\u00E9s utilis\u00E9es dans le produit</li></ul>Pour ajouter des composants, veuillez utiliser le bouton "Ajouter".</p><p>Le bouton "Formuler" permet de calculer les caract\u00E9ristiques du produit \u00E0 partir des caract\u00E9ristiques des composants mis en oeuvre :<ul><li>les co\u00FBts</li><li>les nutriments</li><li>les allerg\u00E8nes</li><li>les ingr\u00E9dients</li><li>l'\u00E9tiquetage des ingr\u00E9dients</li><li>les exigences non respect\u00E9es</li></ul></p>
 
-message.confirm.duplicate-childs.description = \u00CAtes-vous s\u00FBr de vouloir dupliquer les enfants des lignes selectionn\u00E9es?
-message.confirm.duplicate-childs.title       = Dupliquer les enfants
+message.confirm.duplicate-childs.description = \u00CAtes-vous s\u00FBr de vouloir copier les enfants des lignes selectionn\u00E9es?
+message.confirm.duplicate-childs.title       = Copier les enfants
 message.confirm.group.description            = \u00CAtes-vous s\u00FBr de vouloir regrouper les lignes?
 message.confirm.group.title                  = Regrouper
-message.duplicate-childs.failure             = Impossible de dupliquer les enfants
-message.duplicate-childs.success             = Enfants dupliqu\u00E9es avec succ\u00E9s
+message.duplicate-childs.failure             = Impossible de copier les enfants
+message.duplicate-childs.success             = Enfants dupliqu\u00E9s avec succ\u00E8s
+message.duplicate-variant.failure            = Impossible de dupliquer la variante
+message.duplicate-variant.success            = Variante dupliqu\u00E9e avec succ\u00E8s
 message.group.failure                        = Impossible de regrouper les lignes
-message.group.success                        = Lignes regroup\u00E9es avec succ\u00E9s
+message.group.success                        = Lignes regroup\u00E9es avec succ\u00E8s
 
 surf.include.resources = org/alfresco/modules/entity-datagrid/entity-datagrid.get
