Fix #24278 - [Feature] Add Saved search feature

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -92,6 +92,9 @@ org.alfresco.documentlibrary.entity-liked   = {1} a aim\u00E9 l''entit\u00E9 {0}
 
 report.logo.fileName.prefix = logo_FT
 
+spaces.savedsearches.description = Recherches enregistr\u00E9es
+spaces.savedsearches.name        = Recherches enregistr\u00E9es
+
 state.Archived   = 'Archiv\u00E9'
 state.Cancelled  = 'Annul\u00E9'
 state.Closed     = 'Ferm\u00E9'
