--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/formulation-view.get_fr.properties
@@ -1,13 +1,13 @@
 
 actions.add-labelingAspect              = G\u00E9rer l'aspect marquage
-actions.copy-product                    = Copier le produit
-actions.duplicate-childs                = Copier les enfants
+actions.copy-product                    = Dupliquer le produit
+actions.duplicate-childs                = Dupliquer les enfants
 actions.group                           = Regrouper
-actions.selected-items.copy-product     = Copier le(s) produit(s)
-actions.selected-items.duplicate-childs = Copier les enfants
+actions.selected-items.copy-product     = Dupliquer le(s) produit(s)
+actions.selected-items.duplicate-childs = Dupliquer les enfants
 actions.selected-items.group            = Regrouper
-actions.selected-items.simulate         = Simuler le(s) produit(s)
-actions.simulate                        = Simuler le produit
+actions.selected-items.simulate         = Versionner le(s) produit(s)
+actions.simulate                        = Versionner le produit
 actions.toggle-effectivity              = Montrer/masquer l'effectivit\u00E9
 
 button.group = Regrouper
@@ -35,11 +35,11 @@ dashlet.help.bcpg_dynamicCharactList         = <p>Ce dashlet affiche les calculs
 dashlet.help.bcpg_reqCtrlList                = <p>Ce dashlet affiche les exigences non respect\u00E9es.</p><p>Pour ajouter de nouvelles exigences, veuillez cr\u00E9er une sp\u00E9cification produit et la s\u00E9lectionner dans le champ "Sp\u00E9cification produit" du produit.</p>
 dashlet.help.composition                     = <p>Ce dashlet affiche la formule / recette du produit :<ul><li>les mati\u00E8res premi\u00E8res</li><li>les semi fini</li><li>les quantit\u00E9s utilis\u00E9es dans le produit</li></ul>Pour ajouter des composants, veuillez utiliser le bouton "Ajouter".</p><p>Le bouton "Formuler" permet de calculer les caract\u00E9ristiques du produit \u00E0 partir des caract\u00E9ristiques des composants mis en oeuvre :<ul><li>les co\u00FBts</li><li>les nutriments</li><li>les allerg\u00E8nes</li><li>les ingr\u00E9dients</li><li>l'\u00E9tiquetage des ingr\u00E9dients</li><li>les exigences non respect\u00E9es</li></ul></p>
 
-message.confirm.duplicate-childs.description = \u00CAtes-vous s\u00FBr de vouloir copier les enfants des lignes selectionn\u00E9es?
-message.confirm.duplicate-childs.title       = Copier les enfants
+message.confirm.duplicate-childs.description = \u00CAtes-vous s\u00FBr de vouloir dupliquer les enfants des lignes selectionn\u00E9es?
+message.confirm.duplicate-childs.title       = Dupliquer les enfants
 message.confirm.group.description            = \u00CAtes-vous s\u00FBr de vouloir regrouper les lignes?
 message.confirm.group.title                  = Regrouper
-message.duplicate-childs.failure             = Impossible de copier les enfants
+message.duplicate-childs.failure             = Impossible de dupliquer les enfants
 message.duplicate-childs.success             = Enfants dupliqu\u00E9s avec succ\u00E8s
 message.duplicate-variant.failure            = Impossible de dupliquer la variante
 message.duplicate-variant.success            = Variante dupliqu\u00E9e avec succ\u00E8s
